k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: invint

spec:
  selector:
    app: invint

  type: ClusterIP

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
